removing secrets from Git

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+# Yarn
+yarn.lock
 # Prisma
 failed-inferMigrationSteps*
+prisma/.env
